# frozo-frozo-qualcomm-aihub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai-hub-doc.md  alembic.ini  docker-compose.yml  generate_test_model.py  inspect_failed_job.py  inspect_hub_client.py  inspect_hub_session.py  prd.md  prestart.sh  pyproject.toml  test.json  test_hub_reset.py
.github/: dependabot.yml
.github/actions/edgegate/: action.yml
.github/workflows/: ci.yml  deploy.yml  edgegate-test.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_nullable_model_artifact.py  003_ci_secret.py
docs/: INTEGRATION.md  implementation_plan.md  quickstart.md  real_use_case.md
docs/examples/: edgegate-test.yml  github-workflow-example.yml
edgegate/: __init__.py
edgegate/aihub/: __init__.py  client.py  probesuite.py
edgegate/api/: __init__.py  ci_auth.py  deps.py  main.py
edgegate/api/middleware/: __init__.py  rate_limit.py
edgegate/api/routes/: __init__.py  artifacts.py  auth.py  capabilities.py  ci.py  health.py  integrations.py  pipelines.py  promptpacks.py  runs.py  workspaces.py
edgegate/core/: __init__.py  limits.py  logging.py  security.py  sentry.py
edgegate/db/: __init__.py  models.py  session.py
edgegate/probe_models/: __init__.py
edgegate/probe_models/aimet_quant.aimet/: __init__.py  model.encodings  model.onnx
edgegate/probe_models/onnx_external/: __init__.py  generate_onnx_external.py  manifest.json  model.data  model.onnx
edgegate/probe_models/torch/: __init__.py  export_torchscript.py  inputs.py  manifest.json  model.pt  model.py
edgegate/schemas/: metric_mapping.schema.json  model_metadata.schema.json  workspace_capabilities.schema.json
edgegate/services/: __init__.py  artifact.py  auth.py  capabilities.py  evidence.py  integration.py  nonce.py  pipeline.py  promptpack.py  run.py  workspace.py
edgegate/tasks/: __init__.py  run.py
edgegate/validators/: __init__.py  aimet.py  base.py  model_metadata.py  onnx_external.py  promptpack.py
examples/: aihub_probe.py  github_action.yml  probe_suite_runbook.md  quickstart.py  regression_test.py
schemas/: promptpack.schema.json
scripts/: test_ci_integration.sh
tests/: conftest.py
tests/integration/: conftest.py  test_aihub.py  test_api_routes.py
tests/unit/: test_aimet_validator.py  test_limits.py  test_onnx_external_validator.py  test_promptpack_validator.py  test_security.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Sidebar.tsx
web/stitch_run_detail_analysis/automated_test_pipelines/: code.html
web/stitch_run_detail_analysis/create_pipeline_configuration/: code.html
web/stitch_run_detail_analysis/edgegate_workspace_overview/: code.html
(+19 files in other folders)
